# DailyOPIc-BE

./: .dockerignore  .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README_COLLABORATION.md  firestore.rules  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: backend-task.md
.github/workflows/: deploy-cloud-run.yml
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/data/: question_patterns.json
app/models/: api.py  db.py
app/services/: admob.py  ai.py  audio.py  auth.py  difficulty.py  plans.py  questions.py  rate_limit.py  sql_store.py  state.py  telemetry.py  tokens.py
docs/: rdb-refactor-handoff.md
tests/: conftest.py  test_admob.py  test_ai.py  test_api.py  test_auth.py  test_calibration_fixture.py  test_config.py  test_difficulty.py  test_evaluation_calibration.py  test_firestore_emulator.py  test_iap.py  test_mock_sessions.py  test_operations.py  test_question_structure.py  test_sql_store.py  test_state.py
tests/fixtures/: calibration_answers.json
